2006-03-22  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-pgp-key.c:
    * libseahorse/seahorse-pgp-key.h:
    * libseahorse/seahorse-widget.c:
    * libseahorse/seahorse-widget.h:
    * src/Makefile.am:
    * src/seahorse-key-properties.c:
    * src/seahorse-key-properties.glade (removed):
    * src/seahorse-pgp-private-key-properties.glade (added): Rework the 
    private key dialog. Fixes bug# 335414
    
2006-03-21  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-pgp-public-key-properties.glade: HIG tweaks 
    Patch from chpe. Fixes bug# 332663
    
2006-03-21  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-pgp-operation.h: Fix build problem
    
2006-03-21  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/Makefile.am:
    * libseahorse/seahorse-operation.c:
    * libseahorse/seahorse-pgp-operation.c:
    * libseahorse/seahorse-pgp-operation.h:
    * libseahorse/seahorse-pgp-source.h:
    * libseahorse/seahorse-pgp-source.c:
    * libseahorse/seahorse-pgp-key-op.c: Added support for tracking 
    progress on GPGME operations. See Bug #159083
    
2006-03-21  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-key-properties.c:
    * src/seahorse-key-properties.glade:
    * src/seahorse-pgp-public-key-properties.glade:
    * src/seahorse-ssh-key-properties.c:
    * src/seahorse-ssh-key-properties.glade: Change key properties 
    from GtkWindow to GtkDialog. 
    Patch from chpe. Fixes bug# 332663

2006-03-21  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-keyset.c:
    * libseahorse/seahorse-dns-sd.c:
    * libseahorse/seahorse-recipients.c:
    * libseahorse/seahorse-signer.c:
    * src/seahorse-expires.c:
    * src/seahorse-generate-select.c: Fix a bunch of simple build and 
    runtime warnings.
    
2006-03-20  Adam Schreiber  <sadam@clemson.edu>
    
    * daemon/seahorse-sharing.c: Fixed build error and sizing
    of the sharing icon.
