@@ -1,5 +1,10 @@
 2006-03-22  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * seahorse-key-manager.c: Make sure 'First Time Options' 
+    doesn't show itself needlessly
+    
+2006-03-22  Nate Nielsen  <nielsen@memberwebs.com>
+
     * libseahorse/seahorse-pgp-key.c:
     * libseahorse/seahorse-pgp-key.h:
     * libseahorse/seahorse-widget.c:
